--- a/source/assets/stylesheets/components/_cook.scss
+++ b/source/assets/stylesheets/components/_cook.scss
@@ -1,32 +1,30 @@
 .cook {
-	// text-align: center;
 	margin-bottom: space(6);
 	position: relative;
 	padding-right: space(3);
-  p{
-    // font-size: rem(1);
-  }
 }
 
 .cook-photo {
-	position: absolute;
 	overflow: hidden;
-	margin: 0 auto;
-	width: rem(110);
-	height: rem(110);
 	border-radius: 50%;
 	margin-bottom: space(2);
+	width: rem(100);
+	@include breakpoint(sm) {
+		position: absolute;
+		margin: 0 auto;
+	}
 }
 
 .cook-wrapper {
-	margin-left: rem(130);
+	@include breakpoint(sm) {
+		margin-left: rem(130);
+	}
 }
 
 .cook-name {
 	@extend .h3;
 	margin-bottom: space(1);
 	padding-top: space(2);
-	// text-align: center;
 }
 
 .cook-experience {
